# VHDR

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/types/: tauri-plugin-dialog.d.ts
