[package]
name = "hdr-prototype"
version = "0.1.0"
edition = "2021"
build = "build.rs"

description = "HDR Prototype Tauri App"

[lib]
name = "hdr_prototype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
image = { version = "0.24", features = ["png", "jpeg"] }
exr = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
